"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-02-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-09:
	  chpsim: new command 'print-event-header' to print the event 
		table header upon request.  
	  Added value-watch and value-break test cases to test suite.
	  Branch is done, possibly one more clean-up revision before merge.


	* HACKT-00-01-04-main-00-80-79-chpsim-03-08:
	  Added value-based (variable) watchpoints and breakpoints.  
	  Object/ref/reference_set.{h,cc}: added more aggregate set
		operations using STL set algorithms.  
	  TODO: test cases for break-value and watch-value.  
		maybe implement 'nobreakall-*' to allow run while
		sustaining breakpoints.  
	  This is the last feature before merge to trunk.  


2007-02-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-07:
	  Implemented watch/break points on events.
	  new chpsim commands: (mostly self-explanatory)
		break-event, unbreak-event, 
		unbreakall-events, show-event-breaks,
		watch-event, unwatch-event, 
		unwatchall-events, show-event-watchss
	  NOTE: breaks are subset of watches, and so maintained.
		Cannot unwatch a breakpoint, must use unbreak.  
	  CHPSIM::State's return type is now bool, 
		and used for break detection.  
	  Next: watch/break points on state values.  


	* HACKT-00-01-04-main-00-80-79-chpsim-03-06:
	  switch: CHPSIM_STATE_UPDATE_BIN_SETS (enabled)
		Instead of using a vector<pair<type,index> >, 
		we now use set<index>[types] to maintain update lists.  
		The motivation for this is linear time set operations
		when checking against watch sets and break sets.  
	  Added Object/ref/reference_set.{h,cc}.
	  Amazingly, no tweaks in test suite.  


2007-02-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-05: